installed modules required for passport, copied passport file from vishu's code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,6 @@
             "error",
             "always"
         ],
-        "prettier/prettier": "error"
+        // "prettier/prettier": "error"
     }
 }
