--- a/package.json
+++ b/package.json
@@ -12,18 +12,26 @@
   "dependencies": {
     "@fullcalendar/core": "^4.2.0",
     "@fullcalendar/daygrid": "^4.2.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.4",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/list": "^4.3.0",
+    "@fullcalendar/moment": "^4.3.0",
+    "@fullcalendar/moment-timezone": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
+    "animate.css": "^3.7.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
-    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^5.8.6"
+    "sequelize": "^5.8.6",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.13.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.0",
+    "mysql": "^2.7.0",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
