--- a/config/config.json
+++ b/config/config.json
@@ -8,11 +8,11 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "testdb",
+    "password": "Kbs120285",
+    "database": "class_db",
     "host": "localhost",
     "dialect": "mysql",
-    "logging": false
+    "logging": false  
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
