--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@fullcalendar/core": "^4.2.0",
-    "@fullcalendar/daygrid": "^4.2.0",
-<<<<<<< HEAD
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/list": "^4.3.0",
     "@fullcalendar/moment": "^4.3.0",
     "@fullcalendar/moment-timezone": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
-=======
     "animate.css": "^3.7.2",
->>>>>>> 72c65ec69113de30cc8577245f27e76ea2483c10
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6"
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.13.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -34,8 +42,8 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^6.1.4",
-    "prettier": "^1.17.1"
+    "mocha": "^6.2.0",
+    "prettier": "^1.18.2"
   },
   "directories": {
     "test": "test"
