--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
     "@fullcalendar/moment-timezone": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
     "animate.css": "^3.7.2",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.0",
-    "express-handlebars": "^3.1.0",
-    "mysql2": "^1.6.5",
-    "sequelize": "^5.8.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.0",
+    "express-handlebars": "^3.1.0",
     "express-session": "^1.11.3",
     "morgan": "^1.6.0",
     "mysql": "^2.7.0",
+    "mysql2": "^1.6.5",
     "passport": "^0.2.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.8.6",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
